--- a/Gizmo.Client.UI.Resources/Properties/Resources.pt-BR.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.pt-BR.resx
@@ -6,7 +6,7 @@
   Release: Working copy
   Locale: pt-BR, Brazilian Portuguese
   Exported by: Oleg Savelos
-  Exported at: Mon, 17 Jul 2023 10:50:32 +0300 
+  Exported at: Tue, 18 Jul 2023 14:46:49 +0300 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -76,7 +76,7 @@
     <value>Todos os jogos e programas</value> 
   </data> 
   <data name="GIZ_APP_SORTING_OPTION_ADD_DATE" xml:space="preserve"> 
-    <value>Data de instalação</value> 
+    <value>Data de Instalação</value> 
   </data> 
   <data name="GIZ_APP_SORTING_OPTION_POPULARITY" xml:space="preserve"> 
     <value>Popularidade</value> 
@@ -85,7 +85,7 @@
     <value>Avaliação</value> 
   </data> 
   <data name="GIZ_APP_SORTING_OPTION_RELEASE_DATE" xml:space="preserve"> 
-    <value>Data de lançamento</value> 
+    <value>Data de Lançamento</value> 
   </data> 
   <data name="GIZ_APP_SORTING_OPTION_TITLE" xml:space="preserve"> 
     <value>Título</value> 
@@ -172,7 +172,7 @@
     <value>Data de Instalação:</value> 
   </data> 
   <data name="GIZ_APPS_LAUNCH" xml:space="preserve"> 
-    <value>Lançamento</value> 
+    <value>Abrir</value> 
   </data> 
   <data name="GIZ_APPS_LINKS" xml:space="preserve"> 
     <value>Links</value> 
@@ -1036,19 +1036,19 @@
     <value>Máximo de aplicações</value> 
   </data> 
   <data name="GIZ_APP_EXE_ABORT_LAUNCH_VERIFICATION_MESSAGE" xml:space="preserve"> 
-    <value>Tem certeza de que deseja abortar este executável?</value> 
+    <value>Tem certeza de que deseja cancelar a abertura desse aplicativo?</value> 
   </data> 
   <data name="GIZ_APP_EXE_ABORT_LAUNCH_VERIFICATION_TITLE" xml:space="preserve"> 
     <value>Verificar</value> 
   </data> 
   <data name="GIZ_APP_EXE_REPAIR_VERIFICATION_MESSAGE" xml:space="preserve"> 
-    <value>Tem certeza de que deseja reparar este executável</value> 
+    <value>Tem certeza de que deseja reparar este aplicativo?</value> 
   </data> 
   <data name="GIZ_APP_EXE_REPAIR_VERIFICATION_TITLE" xml:space="preserve"> 
     <value>Verificar</value> 
   </data> 
   <data name="GIZ_APP_EXE_TERMINATE_VERIFICATION_MESSAGE" xml:space="preserve"> 
-    <value>Tem certeza de que deseja encerrar este executável?</value> 
+    <value>Tem certeza de que deseja encerrar este aplicativo?</value> 
   </data> 
   <data name="GIZ_APP_EXE_TERMINATE_VERIFICATION_TITLE" xml:space="preserve"> 
     <value>Verificar</value> 
